# dspy_crewai_course

./: .gitignore  LICENSE  README.md  requirements.txt
crewaibootstrap/: README.md  pyproject.toml  travel_itinerary.md  visa_report.md
crewaibootstrap/src/crewaibootstrap/: crew.py  main.py
crewaibootstrap/src/crewaibootstrap/config/: agents.yaml  tasks.yaml
crewaimiprov2/: README.md  market_research.md  pyproject.toml  startup_advice.md
crewaimiprov2/src/crewaimiprov2/: crew.py  main.py
crewaimiprov2/src/crewaimiprov2/config/: agents.yaml  tasks.yaml
dspyintro/: dspyintro.py
vanillacrewai/: README.md  market_opportunities.md  opportunity_report.md  pyproject.toml
vanillacrewai/src/vanillacrewai/: crew.py  main.py
vanillacrewai/src/vanillacrewai/config/: agents.yaml  tasks.yaml
