[project]
name = "crewaibootstrap"
version = "0.1.0"
description = "crewaibootstrap using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
crewaibootstrap = "crewaibootstrap.main:run"
run_crew = "crewaibootstrap.main:run"
train = "crewaibootstrap.main:train"
replay = "crewaibootstrap.main:replay"
test = "crewaibootstrap.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
