[project]
name = "crewaimiprov2"
version = "0.1.0"
description = "crewaimiprov2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
crewaimiprov2 = "crewaimiprov2.main:run"
run_crew = "crewaimiprov2.main:run"
train = "crewaimiprov2.main:train"
replay = "crewaimiprov2.main:replay"
test = "crewaimiprov2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
