[project]
name = "vanillacrewai"
version = "0.1.0"
description = "vanillacrewai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0"
]

[project.scripts]
vanillacrewai = "vanillacrewai.main:run"
run_crew = "vanillacrewai.main:run"
train = "vanillacrewai.main:train"
replay = "vanillacrewai.main:replay"
test = "vanillacrewai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
